yamls/acprovider.yaml
---
# Source: secure-iac-acprovider/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: secure-iac-acprovider
  name: secure-iac-acprovider-deployment
  namespace: sysdig
spec:
  replicas: 2
  selector:
    matchLabels:
      app: secure-iac-acprovider
  template:
    metadata:
      labels:
        app: secure-iac-acprovider
        np-allow-ingress: 'true'
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "25000"
        prometheus.io/scrape: "true"
    spec:
      imagePullSecrets:
      - name: sysdigcloud-pull-secret
      containers:
      - name: secure-iac-acprovider-container
        image: "local/acprovider:latest"
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: 2
            memory: 2Gi
          requests:
            memory: 50Mi
        securityContext:
          readOnlyRootFilesystem: true
