yamls/cloudcollector.yaml
---
# Source: secure-iac-cloudcollector/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: secure-iac-cloudcollector
  name: secure-iac-cloudcollector-deployment
  namespace: sysdig
spec:
  replicas: 
  selector:
    matchLabels:
      app: secure-iac-cloudcollector
  template:
    metadata:
      labels:
        app: secure-iac-cloudcollector
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "25000"
        prometheus.io/scrape: "true"
    spec:
      serviceAccountName: sysdig
      imagePullSecrets:
        - name: sysdigcloud-pull-secret
      containers:        
        - name : secure-iac-cloudcollector-container
          image: "local/cloudcollector:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 2
              memory: 2Gi
            requests:
              cpu: 1
              memory: 50Mi
