yamls/agenthandler.yaml
---
# Source: secure-iac-agenthandler/templates/secure-iac-agenthandler-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: secure-iac-agenthandler-service
  namespace: sysdig
spec:
  type: ClusterIP
  selector:
    app: secure-iac-agenthandler
  ports:
    - port: 8080
      targetPort: 8080
---
# Source: secure-iac-agenthandler/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: secure-iac-agenthandler
  name: secure-iac-agenthandler-deployment
  namespace: sysdig
spec:
  replicas: 
  selector:
    matchLabels:
      app: secure-iac-agenthandler
  template:
    metadata:
      labels:
        app: secure-iac-agenthandler
    spec:
      serviceAccountName: sysdig
      imagePullSecrets:
        - name: sysdigcloud-pull-secret
      containers:
        - name : secure-iac-agenthandler-container
          image: "local/agenthandler:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 250m
              memory: 1Gi
            requests:
              memory: 50Mi
