yamls/cloudengine.yaml
---
# Source: secure-iac-cloudengine/templates/secure-iac-cloudengine-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: secure-iac-cloudengine-service
  namespace: sysdig
spec:
  type: ClusterIP
  selector:
    app: secure-iac-cloudengine
  ports:
    - port: 8080
      targetPort: 8080
---
# Source: secure-iac-cloudengine/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: secure-iac-cloudengine
  name: secure-iac-cloudengine-deployment
  namespace: sysdig
spec:
  replicas: 
  selector:
    matchLabels:
      app: secure-iac-cloudengine
  template:
    metadata:
      labels:
        app: secure-iac-cloudengine
        np-allow-ingress: 'true'
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "25000"
        prometheus.io/scrape: "true"
    spec:
      serviceAccountName: sysdig
      imagePullSecrets:
        - name: sysdigcloud-pull-secret
      volumes:
        
      containers:        
        - name : secure-iac-cloudengine-container
          image: "local/cloudengine:latest"
          imagePullPolicy: IfNotPresent
          volumeMounts:
            
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 2
              memory: 2Gi
            requests:
              memory: 50Mi
---
# Source: secure-iac-cloudengine/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/affinity: cookie
    ingress.kubernetes.io/session-cookie-name: INGRESSCOOKIEAPI
    kubernetes.io/ingress.class: haproxy
  labels:
    app.kubernetes.io/managed-by: ingress-config
    app.kubernetes.io/name: ingress-config
    app.kubernetes.io/part-of: sysdigcloud
    role: ingress-config
    tier: infra
  name: sysdigcloud-secure-iac-cloudengine-ingress
  namespace: sysdig
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: secure-iac-cloudengine-service
                port:
                  number: 8080
            path: /api/cspm/v1/cloud
            pathType: ImplementationSpecific
