yamls/gitprovider.yaml
---
# Source: secure-iac-gitprovider/templates/secure-iac-gitprovider-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: secure-iac-gitprovider-service
  namespace: sysdig
spec:
  type: ClusterIP
  selector:
    app: secure-iac-gitprovider
  ports:
    - port: 8080
      targetPort: 8080
      name: gitprovider
    - port: 8090
      targetPort: 8090
      name: iac
---
# Source: secure-iac-gitprovider/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: secure-iac-gitprovider
  name: secure-iac-gitprovider-statefulset
  namespace: sysdig
spec:
  replicas: 2
  selector:
    matchLabels:
      app: secure-iac-gitprovider
  serviceName: secure-iac-gitprovider-service
  volumeClaimTemplates:
    - metadata:
        name : git-volume
      spec:
        storageClassName: sysdig-reclaim-delete
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
  template:
    metadata:
      labels:
        app: secure-iac-gitprovider
        np-allow-ingress: 'true'
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "25000"
        prometheus.io/scrape: "true"
    spec:
      serviceAccountName: sysdig
      imagePullSecrets:
        - name: sysdigcloud-pull-secret
      volumes:
        - name: proxy-config-vol
          configMap:
            name: secure-iac-gitprovider-config
            items:
              - key: proxyConfg
                path: proxy_config
        
      containers:        
        - name : gitprovider
          image: "local/gitprovider:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /git
              name: git-volume
          resources:
            limits:
              cpu: "2"
              memory: 2Gi
            requests:
              cpu: "1"
              memory: 200Mi
        - name: iac
          image: "local/iac:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8090
          volumeMounts:
            - mountPath: /git
              name: git-volume
            
          resources:
            limits:
              cpu: "3"
              memory: 2Gi
            requests:
              cpu: "1"
              memory: 200Mi
        - name: metrics-proxy
          image: "local/metricsproxy:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 25000
              name: metrics
          volumeMounts:
            - mountPath: /etc/config
              name: proxy-config-vol
          resources:
            limits:
              cpu: "0.2"
              memory: 500Mi
            requests:
              cpu: "0.1"
              memory: 250Mi
---
# Source: secure-iac-gitprovider/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/affinity: cookie
    ingress.kubernetes.io/config-backend: |-
      timeout server 10m
      timeout client 10m
    ingress.kubernetes.io/session-cookie-name: INGRESSCOOKIEAPI
    kubernetes.io/ingress.class: haproxy
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
  labels:
    app.kubernetes.io/managed-by: ingress-config
    app.kubernetes.io/name: ingress-config
    app.kubernetes.io/part-of: sysdigcloud
    role: ingress-config
    tier: infra
  name: sysdigcloud-secure-iac-gitprovider-ingress
  namespace: sysdig
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: secure-iac-gitprovider-service
                port:
                  number: 8080
            path: /api/cspm/v1/gitProvider
            pathType: ImplementationSpecific
          - backend:
              service:
                name: secure-iac-gitprovider-service
                port:
                  number: 8090
            path: /api/cspm/v1/iac
            pathType: ImplementationSpecific
