yamls/nats-external.yaml
---
# Source: nats-external/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nats-external
  namespace: sysdig
  labels:
    helm.sh/chart: nats-external-0.11.0
    
    app.kubernetes.io/name: nats-external
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "2.6.5"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    
    app.kubernetes.io/name: nats-external
    app.kubernetes.io/instance: release-name
  clusterIP: None
  ports:
  - name: websocket
    port: 443
  - name: client
    port: 4222
  - name: cluster
    port: 6222
  - name: monitor
    port: 8222
  - name: metrics
    port: 7777
  - name: leafnodes
    port: 7422
  - name: gateways
    port: 7522
---
# Source: nats-external/templates/nats-box.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-external-box
  namespace: sysdig
  labels:
    app: nats-external-box
    chart: nats-external-0.11.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats-external-box
  template:
    metadata:
      labels:
        app: nats-external-box
    spec:
      volumes:
      
      - name: sysdigcloud-ssl-secret-clients-volume
        secret:
          secretName: sysdigcloud-ssl-secret
      containers:
      - name: nats-box
        image: natsio/nats-box:0.7.0
        imagePullPolicy: IfNotPresent
        resources:
          null
        lifecycle:
          postStart:
            exec:
              command:
              - /bin/sh
              - -c
              - cp /etc/nats-certs/clients/sysdigcloud-ssl-secret/* /usr/local/share/ca-certificates && update-ca-certificates
        command:
         - "tail"
         - "-f"
         - "/dev/null"
        volumeMounts:
        #######################
        #                     #
        #  TLS Volumes Mounts #
        #                     #
        #######################
        
        - name: sysdigcloud-ssl-secret-clients-volume
          mountPath: /etc/nats-certs/clients/sysdigcloud-ssl-secret
---
# Source: nats-external/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nats-external-js-sts
  namespace: sysdig
  labels:
    helm.sh/chart: nats-external-0.11.0
    
    app.kubernetes.io/name: nats-external
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "2.6.5"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      
      app.kubernetes.io/name: nats-external
      app.kubernetes.io/instance: release-name
  replicas: 3
  serviceName: nats-external
  template:
    metadata:
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "7777"
        prometheus.io/scrape: "true"
      labels:
        
        app.kubernetes.io/name: nats-external
        app.kubernetes.io/instance: release-name
    spec:
      imagePullSecrets:
        - name: sysdigcloud-artifactory-pull-secret
        - name: sysdigcloud-pull-secret
        - name: regcred
      # Common volumes for the containers.
      volumes:
      - name: config-volume
        
        configMap:
          name: nats-external-config
        

      

      # Local volume shared with the reloader.
      - name: pid
        emptyDir: {}

      #################
      #               #
      #  TLS Volumes  #
      #               #
      #################
      
      - name: sysdigcloud-ssl-secret-clients-volume
        secret:
          secretName: sysdigcloud-ssl-secret
      
      - name: nats-cluster-ssl-secret-cluster-volume
        secret:
          secretName: nats-cluster-ssl-secret
      
      - name: sysdigcloud-ssl-secret-ws-volume
        secret:
          secretName: sysdigcloud-ssl-secret

      

      # Required to be able to HUP signal and apply config
      # reload to the server without restarting the pod.
      shareProcessNamespace: true

      #################
      #               #
      #  NATS Server  #
      #               #
      #################
      terminationGracePeriodSeconds: 120
      containers:
      - name: nats
        image: mydocker/nats-external:1.0.0
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: 2
            memory: 6Gi
          requests:
            cpu: 1
            memory: 3Gi
        ports:
        - containerPort: 4222
          name: client
        - containerPort: 7422
          name: leafnodes
        - containerPort: 7522
          name: gateways
        - containerPort: 6222
          name: cluster
        - containerPort: 8222
          name: monitor
        - containerPort: 7777
          name: metrics
        - containerPort: 443
          name: websocket

        command:
         - "nats-server"
         - "--config"
         - "/etc/nats-config/nats.conf"
         - "--user=sysdig-external-nats"
         - "--pass=password"

        # Required to be able to define an environment variable
        # that refers to other environment variables.  This env var
        # is later used as part of the configuration file.
        volumeMounts:
          - name: config-volume
            mountPath: /etc/nats-config
          - name: pid
            mountPath: /var/run/nats

          
          - name: nats-external-js-pvc
            mountPath: /data
          #######################
          #                     #
          #  TLS Volumes Mounts #
          #                     #
          #######################
          
          - name: sysdigcloud-ssl-secret-clients-volume
            mountPath: /etc/nats-certs/clients/sysdigcloud-ssl-secret
          
          - name: nats-cluster-ssl-secret-cluster-volume
            mountPath: /etc/nats-certs/cluster/nats-cluster-ssl-secret
          
          - name: sysdigcloud-ssl-secret-ws-volume
            mountPath: /etc/nats-certs/ws/sysdigcloud-ssl-secret

        # Liveness/Readiness probes against the monitoring.
        #
        livenessProbe:
          httpGet:
            path: /
            port: 8222
          initialDelaySeconds: 10
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 8222
          initialDelaySeconds: 10
          timeoutSeconds: 5

        # Gracefully stop NATS Server on pod deletion or image upgrade.
        #
        lifecycle:
          preStop:
            exec:
              # Using the alpine based NATS image, we add an extra sleep that is
              # the same amount as the terminationGracePeriodSeconds to allow
              # the NATS Server to gracefully terminate the client connections.
              #
              command:
              - "/bin/sh"
              - "-c"
              - "nats-server -sl=ldm=/var/run/nats/nats.pid && /bin/sleep 120"

      #################################
      #                               #
      #  NATS Configuration Reloader  #
      #                               #
      #################################
      
      - name: reloader
        image: natsio/nats-server-config-reloader:0.6.2
        imagePullPolicy: IfNotPresent
        resources:
          null
        command:
         - "nats-server-config-reloader"
         - "-pid"
         - "/var/run/nats/nats.pid"
         - "-config"
         - "/etc/nats-config/nats.conf"
        volumeMounts:
          - name: config-volume
            mountPath: /etc/nats-config
          - name: pid
            mountPath: /var/run/nats
      

      ##############################
      #                            #
      #  NATS Prometheus Exporter  #
      #                            #
      ##############################
      
      - name: metrics
        image: natsio/prometheus-nats-exporter:0.9.0
        imagePullPolicy: IfNotPresent
        resources:
          {}
        args:
        - -connz
        - -routez
        - -subz
        - -varz
        - -prefix=nats
        - -use_internal_server_id
        - -jsz=all
        - http://localhost:8222/
        ports:
        - containerPort: 7777
          name: metrics
      

  volumeClaimTemplates:
  #####################################
  #                                   #
  #  Jetstream New Persistent Volume  #
  #                                   #
  #####################################
    - metadata:
        name: nats-external-js-pvc
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: 1Gi
---
# Source: nats-external/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/affinity: cookie
    ingress.kubernetes.io/session-cookie-name: INGRESSCOOKIEAPI
    kubernetes.io/ingress.class: haproxy
  labels:
    app.kubernetes.io/managed-by: ingress-config
    app.kubernetes.io/name: ingress-config
    app.kubernetes.io/part-of: sysdigcloud
    role: ingress-config
    tier: infra
  name: sysdigcloud-secure-iac-nats-external-ingress
  namespace: sysdig
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: nats-external
                port:
                  number: 443
            path: /cspm-agent
            pathType: ImplementationSpecific
