yamls/policy.yaml
---
# Source: secure-iac-policy/templates/secure-iac-policy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: secure-iac-policy-service
  namespace: sysdig
spec:
  type: ClusterIP
  selector:
    app: secure-iac-policy
  ports:
    - port: 8080
      targetPort: 8080
---
# Source: secure-iac-policy/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: secure-iac-policy
  name: secure-iac-policy-deployment
  namespace: sysdig
spec:
  replicas: 
  selector:
    matchLabels:
      app: secure-iac-policy
  template:
    metadata:
      labels:
        app: secure-iac-policy
        np-allow-ingress: 'true'
    spec:
      serviceAccountName: sysdig
      imagePullSecrets:
        - name: sysdigcloud-pull-secret
      containers:        
        - name : secure-iac-policy-container
          image: "local/policy:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
# Source: secure-iac-policy/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/affinity: cookie
    ingress.kubernetes.io/session-cookie-name: INGRESSCOOKIEAPI
    kubernetes.io/ingress.class: haproxy
  labels:
    app.kubernetes.io/managed-by: ingress-config
    app.kubernetes.io/name: ingress-config
    app.kubernetes.io/part-of: sysdigcloud
    role: ingress-config
    tier: infra
  name: sysdigcloud-secure-iac-policy-ingress
  namespace: sysdig
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: secure-iac-policy-service
                port:
                  number: 8080
            path: /api/cspm/v1/policy
            pathType: ImplementationSpecific
